--- a/pages/home.html
+++ b/pages/home.html
@@ -38,19 +38,73 @@
             </div>
         </div>
         <div class="home-main main">
-            <div class="flsb headline">
-                <div class="flc-y">
-                    <div class="v-line"></div>
-                    <div class="pl5 f13 blod">标题</div>
+            <div>
+                <div class="flsb titleNav">
+                    <div class="flc-y">
+                        <div class="v-line"></div>
+                        <div class="pl5 f13 blod">公开课</div>
+                    </div>
+                    <div class="more flc-y">
+                        <div class="scaleWidth">更多课程</div>
+                        <div class="arrows flcc">
+                            <img src="/images/view/home/arrow-right.png" alt="">
+                        </div>
+                    </div>
                 </div>
-                <div class="more flc-y">
-                    <div>更多</div>
-                    <div>箭头</div>
+                <div class="flsb video-box" >
+                    <div>
+                        <div class="video-item">
+                            <video
+                                controls 
+                                src="https://vdept.bdstatic.com/4a4d586b695175584342335634345550/337134326c464d77/e3633fd3f1fda81d672f7c3a4901d2cebda242ee8d9185fa9ec60135448a8b1512d5e4420de96930f37547e2018185dc0be999144332a234fd3d8e7a7e3b8d2f.mp4?auth_key=1594701973-0-0-8cef2cb3f30c025d02be538419e8e100"></video>
+                        </div>
+                        <div class="video-des">
+                            焊工操作实训教程
+                        </div>
+                    </div>
+                    <div>
+                        <div class="video-item">
+                            <video src="https://vdept.bdstatic.com/4a4d586b695175584342335634345550/337134326c464d77/e3633fd3f1fda81d672f7c3a4901d2cebda242ee8d9185fa9ec60135448a8b1512d5e4420de96930f37547e2018185dc0be999144332a234fd3d8e7a7e3b8d2f.mp4?auth_key=1594701973-0-0-8cef2cb3f30c025d02be538419e8e100"></video>
+                        </div>
+                        <div class="video-des">
+                            电工电子技能实训教程
+                        </div>
+                    </div>
                 </div>
             </div>
-            <div class="flsb">
-                <div>视频一</div>
-                <div>视频二</div>
+            <div>
+                <div class="flsb titleNav">
+                    <div class="flc-y">
+                        <div class="v-line"></div>
+                        <div class="pl5 f13 blod">精品课</div>
+                    </div>
+                    <div class="more flc-y">
+                        <div class="scaleWidth">更多课程</div>
+                        <div class="arrows flcc">
+                            <img src="/images/view/home/arrow-right.png" alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="flsb video-box" >
+                    <div>
+                        <div class="video-item">
+                            <video
+                                controls 
+                                src="https://vdept.bdstatic.com/4a4d586b695175584342335634345550/337134326c464d77/e3633fd3f1fda81d672f7c3a4901d2cebda242ee8d9185fa9ec60135448a8b1512d5e4420de96930f37547e2018185dc0be999144332a234fd3d8e7a7e3b8d2f.mp4?auth_key=1594701973-0-0-8cef2cb3f30c025d02be538419e8e100"></video>
+                        </div>
+                        <div class="video-des">
+                            电工电子实验教程
+                        </div>
+                    </div>
+                    <div>
+                        <div class="video-item">
+                            <video src="https://vdept.bdstatic.com/4a4d586b695175584342335634345550/337134326c464d77/e3633fd3f1fda81d672f7c3a4901d2cebda242ee8d9185fa9ec60135448a8b1512d5e4420de96930f37547e2018185dc0be999144332a234fd3d8e7a7e3b8d2f.mp4?auth_key=1594701973-0-0-8cef2cb3f30c025d02be538419e8e100"></video>
+                        </div>
+                        <div class="video-des">
+                            装配钳工技能实操教程
+                        </div>
+                    </div>
+                </div>
             </div>
         </div> 
     </div>  
