--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 </head>
 <script src="./js/zepto.min.js"></script>
 <body>     
+    <div>
+        <a href="./pages/home.html">首页</a>
+    </div>
 <script src="./utils/rem.js"></script>
 </body>
 </html>
