--- a/pages/home.html
+++ b/pages/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>weui</title>  
+    <title>首页</title>  
     <link rel="stylesheet" href="https://res.wx.qq.com/open/libs/weui/2.4.0/weui.min.css">
     <link rel="stylesheet" href="./../css/base.css">
     <link rel="stylesheet" href="./../css/home.css">
@@ -14,24 +14,24 @@
     <div class="page">
         <div class="home-top">
             <div class="home-banner">
-                <img src="/images/view/home/Banner.png" alt="">
+                <img src="../images/view/home/Banner.png" alt="">
             </div>
             <div class="home-nav main flsa flc-y"> 
                 <div class="nav-item fl-y-sb">
                     <div class="item-icon">
-                        <img src="/images/view/home/apply.png" alt="">
+                        <img src="../images/view/home/apply.png" alt="">
                     </div>
                     <div class="item-title">我要报名</div>
                 </div>
                 <div class="nav-item fl-y-sb">
                     <div class="item-icon">
-                        <img src="/images/view/home/buy.png" alt="">
+                        <img src="../images/view/home/buy.png" alt="">
                     </div>
                     <div class="item-title">我要购卡</div>
                 </div>
                 <div class="nav-item fl-y-sb">
                     <div class="item-icon">
-                        <img src="/images/view/home/binding.png" alt="">
+                        <img src="../images/view/home/binding.png" alt="">
                     </div>
                     <div class="item-title">卡密绑定</div>
                 </div>
@@ -39,7 +39,7 @@
         </div>
         <div class="home-main main">
             <div>
-                <div class="flsb titleNav">
+                <div class="flsb titleNav first-top">
                     <div class="flc-y">
                         <div class="v-line"></div>
                         <div class="pl5 f13 blod">公开课</div>
@@ -47,7 +47,7 @@
                     <div class="more flc-y">
                         <div class="scaleWidth">更多课程</div>
                         <div class="arrows flcc">
-                            <img src="/images/view/home/arrow-right.png" alt="">
+                            <img src="../images/view/home/arrow-right.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                         <div class="video-item">
                             <video
                                 controls 
-                                src="https://vdept.bdstatic.com/4a4d586b695175584342335634345550/337134326c464d77/e3633fd3f1fda81d672f7c3a4901d2cebda242ee8d9185fa9ec60135448a8b1512d5e4420de96930f37547e2018185dc0be999144332a234fd3d8e7a7e3b8d2f.mp4?auth_key=1594701973-0-0-8cef2cb3f30c025d02be538419e8e100"></video>
+                                src="./../images/video/4aef3e0dea11ef2fd66514f567c69789.mp4"></video>
                         </div>
                         <div class="video-des">
                             焊工操作实训教程
@@ -64,7 +64,7 @@
                     </div>
                     <div>
                         <div class="video-item">
-                            <video src="https://vdept.bdstatic.com/4a4d586b695175584342335634345550/337134326c464d77/e3633fd3f1fda81d672f7c3a4901d2cebda242ee8d9185fa9ec60135448a8b1512d5e4420de96930f37547e2018185dc0be999144332a234fd3d8e7a7e3b8d2f.mp4?auth_key=1594701973-0-0-8cef2cb3f30c025d02be538419e8e100"></video>
+                            <video controls src="./../images/video/a62e6a2ea2d4aca37835b4399605684c.mp4"></video>
                         </div>
                         <div class="video-des">
                             电工电子技能实训教程
@@ -81,7 +81,7 @@
                     <div class="more flc-y">
                         <div class="scaleWidth">更多课程</div>
                         <div class="arrows flcc">
-                            <img src="/images/view/home/arrow-right.png" alt="">
+                            <img src="../images/view/home/arrow-right.png" alt="">
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
                         <div class="video-item">
                             <video
                                 controls 
-                                src="https://vdept.bdstatic.com/4a4d586b695175584342335634345550/337134326c464d77/e3633fd3f1fda81d672f7c3a4901d2cebda242ee8d9185fa9ec60135448a8b1512d5e4420de96930f37547e2018185dc0be999144332a234fd3d8e7a7e3b8d2f.mp4?auth_key=1594701973-0-0-8cef2cb3f30c025d02be538419e8e100"></video>
+                                src="./../images/video/a62e6a2ea2d4aca37835b4399605684c.mp4"></video>
                         </div>
                         <div class="video-des">
                             电工电子实验教程
@@ -98,7 +98,7 @@
                     </div>
                     <div>
                         <div class="video-item">
-                            <video src="https://vdept.bdstatic.com/4a4d586b695175584342335634345550/337134326c464d77/e3633fd3f1fda81d672f7c3a4901d2cebda242ee8d9185fa9ec60135448a8b1512d5e4420de96930f37547e2018185dc0be999144332a234fd3d8e7a7e3b8d2f.mp4?auth_key=1594701973-0-0-8cef2cb3f30c025d02be538419e8e100"></video>
+                            <video controls src="./../images/video/4aef3e0dea11ef2fd66514f567c69789.mp4"></video>></video>
                         </div>
                         <div class="video-des">
                             装配钳工技能实操教程
