--- a/pages/home.html
+++ b/pages/home.html
@@ -98,7 +98,7 @@
                     </div>
                     <div>
                         <div class="video-item">
-                            <video controls src="./../images/video/4aef3e0dea11ef2fd66514f567c69789.mp4"></video>></video>
+                            <video controls src="./../images/video/4aef3e0dea11ef2fd66514f567c69789.mp4"></video>
                         </div>
                         <div class="video-des">
                             装配钳工技能实操教程
