--- a/pages/applyInfo.html
+++ b/pages/applyInfo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>历史报名-详情页-钳工</title>
     <link rel="stylesheet" href="./../css/base.css">   
     <link rel="stylesheet" href="./../css/apply.css"> 
