我的消息样式

--- a/pages/myMessage.html
+++ b/pages/myMessage.html
@@ -4,8 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport"   content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>我的消息</title>
+    <link rel="stylesheet" href="./../css/base.css"> 
+    <link rel="stylesheet" href="./../css/apply.css"> 
 </head>
 <body>
-    
+    <div class="apply-history-box">
+        <div class="titleNav">
+            <div class="flc-y">
+                <div class="v-line"></div>
+                <div class="pl5 f13 blod">消息列表</div>
+            </div> 
+        </div>
+        <div class="history-list flsb">
+            <div class="left fl-y-sb">
+                <div class="title">消息标题文字信息内容</div>
+                <div class="time">2020-01-02 10:00:00</div>
+            </div>
+            <div class="right flcc">
+                <i class="cir"></i>
+                <img src="../images/view/common/arrow-right.png" alt="">
+            </div>
+        </div>  
+        <div class="history-list flsb">
+            <div class="left fl-y-sb">
+                <div class="title">消息标题文字信息内容</div>
+                <div class="time">2020-01-02 10:00:00</div>
+            </div>
+            <div class="right flcc">
+                <i class="cir"></i>
+                <img src="../images/view/common/arrow-right.png" alt="">
+            </div>
+        </div>  
+        <div class="history-list flsb">
+            <div class="left fl-y-sb">
+                <div class="title">消息标题文字信息内容</div>
+                <div class="time">2020-01-02 10:00:00</div>
+            </div>
+            <div class="right flcc">
+                <img src="../images/view/common/arrow-right.png"  alt="">
+            </div>
+        </div>  
+        <div class="history-list flsb">
+            <div class="left fl-y-sb">
+                <div class="title">消息标题文字信息内容</div>
+                <div class="time">2020-01-02 10:00:00</div>
+            </div>
+            <div class="right flcc">
+                <img src="../images/view/common/arrow-right.png"  alt="">
+            </div>
+        </div>   
+    </div>
+    <script src="../utils/rem.js"></script>
 </body>
 </html>
