个人信息页

--- a/pages/userInfo.html
+++ b/pages/userInfo.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./../css/userInfo.css">
 </head>
 <body>
-    <div>
+    <div class="page">
         <div class="user-top flsb">
             <div class="message">
                 <img src="../images/view/userInfo/message@2x.png" alt="">
@@ -48,17 +48,129 @@
                 <div>
                     <img src="../images/view/userInfo/papers.png" alt="">
                 </div>
-            </div>
-            <div>
-                <!-- 个人资料 -->
-                <div class="flsb titleNav first-top">
-                    <div class="flc-y">
-                        <div class="v-line"></div>
-                        <div class="pl5 f13 blod">个人资料</div>
-                    </div> 
-                </div>
-                
             </div> 
+
+
+            <!-- 个人资料 --> 
+            <div class="flsb titleNav first-top">
+                <div class="flc-y">
+                    <div class="v-line"></div>
+                    <div class="pl5 f13 blod">个人资料</div>
+                </div> 
+            </div>
+            <div class="user-data-box">
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        姓名
+                    </div>
+                    <div class="flc-y">
+                        邓先生
+                    </div>
+                </div>
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        身份证号
+                    </div>
+                    <div class="flc-y">
+                        32011119901230987X
+                    </div>
+                </div> 
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        性别
+                    </div>
+                    <div class="flc-y">
+                        男
+                    </div>
+                </div> 
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        民族
+                    </div>
+                    <div class="flc-y">
+                        汉
+                    </div>
+                </div> 
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        手机号码
+                    </div>
+                    <div class="flc-y">
+                        13888886668
+                    </div>
+                </div> 
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        学历
+                    </div>
+                    <div class="flc-y">
+                        中专或同等学历
+                    </div>
+                </div> 
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        健康状况
+                    </div>
+                    <div class="flc-y">
+                        合格
+                    </div>
+                </div> 
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        工作单位
+                    </div>
+                    <div class="flc-y">
+                        西北煤炭动力集团
+                    </div>
+                </div> 
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        通讯地址
+                    </div>
+                    <div class="flc-y">
+                        陕西省 西安市 临潼区
+                    </div>
+                </div> 
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        邮政编码
+                    </div>
+                    <div class="flc-y">
+                        710600
+                    </div>
+                </div> 
+            </div>
+
+
+            <!-- 关于我们 --> 
+            <div class="flsb titleNav first-top">
+                <div class="flc-y">
+                    <div class="v-line"></div>
+                    <div class="pl5 f13 blod">关于我们</div>
+                </div> 
+            </div>
+            <div class="user-data-box">
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        用户服务协议
+                    </div>
+                    <div class="flc-y" >
+                        <div class="img">
+                            <img src="../images/view/common/arrow-right.png"  alt="">
+                        </div>
+                    </div>
+                </div>
+                <div class="user-data flsb">
+                    <div class="lable blod flc-y">
+                        个人信息保护及隐私政策
+                    </div>
+                    <div class="flc-y" >
+                        <div class="img">
+                            <img src="../images/view/common/arrow-right.png"  alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
