--- a/pages/home.html
+++ b/pages/home.html
@@ -55,6 +55,7 @@
                         <div class="video-item">
                             <video
                                 controls 
+                                preload="auto"
                                 src="./../images/video/4aef3e0dea11ef2fd66514f567c69789.mp4"></video>
                         </div>
                         <div class="video-des">
@@ -63,7 +64,7 @@
                     </div>
                     <div>
                         <div class="video-item">
-                            <video controls src="./../images/video/a62e6a2ea2d4aca37835b4399605684c.mp4"></video>
+                            <video controls  preload="auto" src="./../images/video/a62e6a2ea2d4aca37835b4399605684c.mp4"></video>
                         </div>
                         <div class="video-des">
                             电工电子技能实训教程
@@ -89,6 +90,7 @@
                         <div class="video-item">
                             <video
                                 controls 
+                                preload="auto"
                                 src="./../images/video/a62e6a2ea2d4aca37835b4399605684c.mp4"></video>
                         </div>
                         <div class="video-des">
@@ -97,7 +99,7 @@
                     </div>
                     <div>
                         <div class="video-item">
-                            <video controls src="./../images/video/4aef3e0dea11ef2fd66514f567c69789.mp4"></video>
+                            <video controls preload="auto" src="./../images/video/4aef3e0dea11ef2fd66514f567c69789.mp4"></video>
                         </div>
                         <div class="video-des">
                             装配钳工技能实操教程
